--- a/namelist.in
+++ b/namelist.in
@@ -2,7 +2,7 @@
  &run_vars
 	nm1%outputfile = '/tmp/output.nc',
 	nm1%subgrid_model=2, ! 1 = constant viscosity, 2=smagorinsky
-	nm1%viscous_dissipation=.false.,
+	nm1%viscous_dissipation=.true.,
 	nm1%restart=.false.,
 	nm1%cvis=0.23, ! 0.23 desireable
 	nm1%runtime= 7200.,
