--- a/namelist.in
+++ b/namelist.in
@@ -4,6 +4,7 @@
 	nm1%subgrid_model=2, ! 1 = constant viscosity, 2=smagorinsky
 	nm1%viscous_dissipation=.true.,
 	nm1%damping_layer=.true.,
+	nm1%ptol=1.e-8,         ! tolerance for pressure solver
 	nm1%damping_thickness=2000.,
 	nm1%damping_tau=1000.,
 	nm1%z0=1.e-4,
@@ -12,7 +13,7 @@
 	nm1%cvis=0.23, ! 0.23 desireable
 	nm1%runtime= 7200.,
 	nm1%dt=5.,
-	nm1%advection_scheme=2, ! 0=upstream, 1=mpdata (for scalars with separate ref state),
+	nm1%advection_scheme=1, ! 0=upstream, 1=mpdata (for scalars with separate ref state),
 	                        ! 2=mpdata (for scalars with ref state added)
 	nm1%monotone=.true.,    ! monotone advection   (for scalars)
 	nm1%kord=3,    			! order for mpdata advection scheme
@@ -25,7 +26,7 @@
 	nm1%kp=120,
 	nm1%dx=200.,
 	nm1%dy=200.,
-	nm1%dz=100.,
+	nm1%dz=200.,
  	nm1%psurf=100000.,
  	nm1%tsurf=297.9,
     nm1%n_levels = 4,
