--- a/namelist.in
+++ b/namelist.in
@@ -4,11 +4,13 @@
 	nm1%subgrid_model=2, ! 1 = constant viscosity, 2=smagorinsky
 	nm1%viscous_dissipation=.true.,
 	nm1%damping_layer=.true.,
+	nm1%forcing=.true.,
 	nm1%ptol=1.e-8,         ! tolerance for pressure solver
 	                        ! please note for mass conservation 1.e-8 required
 	                        ! for simulations with dy=200, dz=100, dt=5s
 	nm1%damping_thickness=3000.,
 	nm1%damping_tau=1000.,
+	nm1%forcing_tau=1000.,
 	nm1%z0=1.e-4,
 	nm1%z0th=1.e-4,
 	nm1%restart=.false.,
