added routines for initialising with an adiabatic cloud layer

--- a/namelist.in
+++ b/namelist.in
@@ -9,7 +9,7 @@
 	                        ! for simulations with dy=200, dz=100, dt=5s
 	nm1%damping_thickness=3000.,
 	nm1%damping_tau=1000.,
-	nm1%forcing_tau=500.,
+	nm1%forcing_tau=250.,
 	nm1%z0=1.e-4,
 	nm1%z0th=1.e-4,
 	nm1%restart=.false.,
@@ -27,7 +27,7 @@
 	nm1%ice_flag=.false.,    ! include ice microphysics part of pamm
 	nm1%bam_nmlfile='pamm/bam/namelist.in',  ! filename of bam namelist
 	nm1%aero_nmlfile='pamm/namelist.in',     ! filename of aerosol profile namelist
-	nm1%aero_prof_flag=.true.,              ! flag to read in a profile of aerosol
+	nm1%aero_prof_flag=.false.,              ! flag to read in a profile of aerosol
 	nm1%drop_num_init=.true.,       ! only works for microphysics_flag=2,3
 	nm1%drop_num=5000.e6,            ! initial drop number concentration
 	nm1%output_interval=10.,
@@ -44,6 +44,12 @@
 	nm1%dz=100.,
  	nm1%psurf=100000.,
  	nm1%tsurf=290.9,
+ 	nm1%adiabatic_prof=.false.,
+ 	nm1%adiabatic_frac=1.,
+ 	nm1%t_cbase=283.,
+ 	nm1%t_ctop=274.,
+ 	nm1%rh_above=0.9,
+ 	nm1%th_grad=0.005,
     nm1%n_levels = 7/
 &sounding_vars
 	q_read(1,1:7)   = 0.0099, 0.0099, 0.0099, 1.4e-11, 1.4e-11, 1.4e-11, 1.4e-11,
