capability to initialise shear layer from namelist

--- a/namelist.in
+++ b/namelist.in
@@ -60,7 +60,12 @@
  	nm1%rh_above=0.9,
  	nm1%th_jump=0.,
  	nm1%th_grad=0.005,
-    nm1%n_levels = 7/
+    nm1%n_levels = 7,
+    nm1%param_wind=.false., ! these variables define the wind if param_wind set to true
+    nm1%param_vmax=5.,
+    nm1%param_z=2500.,
+    nm1%param_sigz=50.,
+    nm1%param_delz=100./
 &sounding_vars
 	q_read(1,1:7)   = 0.0099, 0.0099, 0.0099, 1.4e-4, 1.4e-4, 1.4e-11, 1.4e-11,
 	theta_read(1:7) = 290.9, 290.9, 290.9,290.9,290.9, 300.9, 400., !312.95,
