--- a/pts/Makefile
+++ b/pts/Makefile
@@ -18,9 +18,9 @@ FOR2 = mpif90
 AR = ar 
 RANLIB = ranlib 
 OBJ = o
-FFLAGS = $(OPT)  $(DEBUG)  -o 
+FFLAGS = $(OPT)  $(DEBUG) -w -fallow-argument-mismatch -o 
 FFLAGSOMP = -fopenmp-simd $(FFLAGS)
-FFLAGS2 =  $(DEBUG) -O3 -o 
+FFLAGS2 =  $(DEBUG) -w -fallow-argument-mismatch -O3 -o 
 
 
 main.exe	:  main.$(OBJ) variables.$(OBJ)  parallel_tridag.$(OBJ) mpi_module.$(OBJ) \
