--- a/namelist.in
+++ b/namelist.in
@@ -33,6 +33,7 @@
 	nm1%ice_flag=.true.,    ! include ice microphysics part of pamm
 	nm1%j_stochastic=0.5e-9,        ! nucleation rate s-1
 	nm1%ice_nuc_flag=1,             ! 1 is for Demott, 2 is for const stochastic 
+	nm1%mode2_ice_flag=0,           ! 0 is off; 1 is on - experimental
 	nm1%rad_nmlfile='rtm/namelist.in',       ! filename for radiation namelist
 	nm1%bam_nmlfile='pamm/bam/namelist.in',  ! filename of bam namelist
 	nm1%aero_nmlfile='pamm/namelist.in',     ! filename of aerosol profile namelist
