--- a/run_scripts/namelist_kelvin_helmholtz.in
+++ b/run_scripts/namelist_kelvin_helmholtz.in
@@ -7,6 +7,7 @@
 	nm1%divergence=.false., ! flag for large-scale subsidence - sets the vertical wind
 	                        ! so that divergence of horizontal winds should equal 
 	                        ! that specified
+	nm1%radiation=.true.,   ! flag for radiation calculations
 	nm1%ptol=1.e-8,         ! tolerance for pressure solver
 	                        ! please note for mass conservation 1.e-8 required
 	                        ! for simulations with dy=200, dz=100, dt=5s
@@ -30,7 +31,15 @@
 	                        ! 2 (bulk scheme #2)
 	                        ! 3 (bulk scheme #3)
 	nm1%ice_flag=.false.,    ! include ice microphysics part of pamm
-	nm1%bam_nmlfile='../pamm/bam/namelist.in',  ! filename of bam namelist
+	nm1%j_stochastic=0.5e-9,        ! nucleation rate s-1
+	nm1%ice_nuc_flag=1,             ! 1 is for Demott, 2 is for const stochastic 
+	nm1%hm_flag=.false.,             ! hm process
+	nm1%wr_flag=.true.,             ! switch for warm rain process
+	nm1%mode2_ice_flag=0,           ! 0 is off; 1 is on - experimental
+	nm1%coll_breakup_flag1=0,        ! 0 is off; 1 is on - experimental
+	nm1%heyms_west=.true.,          ! flag for new fall-speeds
+	nm1%rad_nmlfile='run_scripts/westbrook_illingworth_rad_nml.in',       ! filename for radiation namelist
+    nm1%bam_nmlfile='../pamm/bam/namelist.in',  ! filename of bam namelist
 	nm1%aero_nmlfile='../pamm/namelist.in',     ! filename of aerosol profile namelist
 	nm1%aero_prof_flag=.false.,              ! flag to read in a profile of aerosol
 	nm1%drop_num_init=.true.,       ! only works for microphysics_flag=2,3
@@ -56,7 +65,12 @@
  	nm1%rh_above=0.9,
  	nm1%th_jump=0.,
  	nm1%th_grad=0.005,
-    nm1%n_levels = 7/
+    nm1%n_levels = 7,
+    nm1%param_wind=.true., ! these variables define the wind if param_wind set to true
+    nm1%param_vmax=15.,
+    nm1%param_z=2500.,
+    nm1%param_sigz=50.,
+    nm1%param_delz=100./
 &sounding_vars
 	q_read(1,1:7)   = 0.0099, 0.0099, 0.0099, 1.4e-4, 1.4e-4, 1.4e-11, 1.4e-11,
 	theta_read(1:7) = 290.9, 290.9, 290.9,290.9,290.9, 300.9, 400., !312.95,
