--- a/run_scripts/westbrook_illingworth_nml_adiabatic.in
+++ b/run_scripts/westbrook_illingworth_nml_adiabatic.in
@@ -4,7 +4,7 @@
 	nm1%viscous_dissipation=.true.,
 	nm1%damping_layer=.true.,
 	nm1%forcing=.true.,
-	nm1%divergence=.false., ! flag for large-scale subsidence - sets the vertical wind
+	nm1%divergence=.true., ! flag for large-scale subsidence - sets the vertical wind
 	                        ! so that divergence of horizontal winds should equal 
 	                        ! that specified
 	nm1%radiation=.true.,   ! flag for radiation calculations
