--- a/run_scripts/namelist_kelvin_helmholtz.in
+++ b/run_scripts/namelist_kelvin_helmholtz.in
@@ -38,6 +38,8 @@
 	nm1%mode2_ice_flag=0,           ! 0 is off; 1 is on - experimental
 	nm1%coll_breakup_flag1=0,        ! 0 is off; 1 is on - experimental
 	nm1%heyms_west=.true.,          ! flag for new fall-speeds
+	nm1%lawson=.false.,          ! lawson rain drop fragmentation
+	nm1%recycle=.true.,          ! recycle aerosol
 	nm1%rad_nmlfile='run_scripts/westbrook_illingworth_rad_nml.in',       ! filename for radiation namelist
     nm1%bam_nmlfile='../pamm/bam/namelist.in',  ! filename of bam namelist
 	nm1%aero_nmlfile='../pamm/namelist.in',     ! filename of aerosol profile namelist
