--- a/namelist.in
+++ b/namelist.in
@@ -35,6 +35,7 @@
 	nm1%ice_nuc_flag=1,             ! 1 is for Demott, 2 is for const stochastic 
 	nm1%hm_flag=.true.,             ! hm process
 	nm1%wr_flag=.true.,             ! switch for warm rain process
+	nm1%mode1_ice_flag=0,           ! 0 is off; 1 is on - experimental
 	nm1%mode2_ice_flag=0,           ! 0 is off; 1 is on - experimental
 	nm1%coll_breakup_flag1=0,        ! 0 is off; 1 is on - experimental
 	nm1%heyms_west=.true.,          ! flag for new fall-speeds
