--- a/namelist.in
+++ b/namelist.in
@@ -28,14 +28,20 @@
 	
  &rad_vars
  	nm2%start_year=2017,
- 	nm2%start_mon=1,
+ 	nm2%start_mon=6,
  	nm2%start_day=31,
  	nm2%start_hour=15,
  	nm2%start_min=50,
  	nm2%start_sec=0,
  	nm2%lat_ref=53.495871,
  	nm2%lon_ref=-2.345043,
+ 	nm2%gases_file = 'data/bli_data.nc',
+ 	nm2%nmolecule = 8,
+ 	nm2%moleculeID(1:8) = 1, 2, 3, 4, 5, 6, 7, 24, ! H2O, CO2, O3, N2O, CO, CH4, O2, CH3Cl
+ 	nm2%moleculePPM(1:8) = -99, 417, 0.070, 0.330, 5., 1.900, 209460., 0.000545, 
+ 	                        ! H2O, CO2, O3, N2O, CO, CH4, O2, CH3Cl
  	nm2%quad_flag=0, ! 0 is quadrature, 1 is Eddington
+ 	nm2%gas_absorption=.true.,
  	nm2%albedo="Grass",
  	nm2%emissivity="Grass",
  	nm2%asymmetry_water=0.85,
