--- a/namelist.in
+++ b/namelist.in
@@ -4,13 +4,16 @@
 	nm1%viscous_dissipation=.true.,
 	nm1%damping_layer=.true.,
 	nm1%forcing=.true.,
-	nm1%divergence=.false., ! flag for large-scale subsidence - sets the vertical wind
-	                        ! so that divergence of horizontal winds should equal 
-	                        ! that specified
-	nm1%radiation=.false.,   ! flag for radiation calculations
-	nm1%ptol=1.e-8,         ! tolerance for pressure solver
-	                        ! please note for mass conservation 1.e-8 required
-	                        ! for simulations with dy=200, dz=100, dt=5s
+	nm1%divergence=.false.,     ! flag for large-scale subsidence - sets the vertical wind
+	                            ! so that divergence of horizontal winds should equal 
+	                            ! that specified
+	nm1%radiation=.false.,       ! flag for radiation calculations
+	nm1%land_surface=.false.,   ! flag for land-surface calculations
+	nm1%land_surface_init=1,    ! 0=initialise t from lsm namelist, 1=initialise t from this namelist, 
+	                            ! 2=initialise surface from this namelist and subsurface from lsm namelist
+	nm1%ptol=1.e-8,             ! tolerance for pressure solver
+	                            ! please note for mass conservation 1.e-8 required
+	                            ! for simulations with dy=200, dz=100, dt=5s
 	nm1%damping_thickness=5000.,
 	nm1%damping_tau=1000.,
 	nm1%forcing_tau=125.,
@@ -42,6 +45,7 @@
 	nm1%lawson=.false.,          ! lawson rain drop fragmentation
 	nm1%recycle=.true.,          ! recycle aerosol
 	nm1%rad_nmlfile='rtm/namelist.in',       ! filename for radiation namelist
+	nm1%lsm_nmlfile='lsm/namelist.in',       ! filename for land-surface namelist
 	nm1%bam_nmlfile='pamm/bam/namelist.in',  ! filename of bam namelist
 	nm1%aero_nmlfile='pamm/namelist.in',     ! filename of aerosol profile namelist
 	nm1%aero_prof_flag=.false.,              ! flag to read in a profile of aerosol
